--- a/index.html
+++ b/index.html
@@ -13,30 +13,28 @@
         <link rel="stylesheet" href="./assets/css/theme.css">
         <link rel="stylesheet" href="./assets/css/loopple/loopple.css">
     </head>
-    
-    <body class="null">
-        <div class="container flex flex-col mx-auto">
-            <!-- Main container with navigation and header content -->
-        </div>
-        <div class="w-full">
-            <!-- Wide full-width container for additional content -->
-        </div>
-        <div class="container mx-auto">
-            <!-- Centered container for more content -->
-        </div>
-        <div class="w-full">
-            <!-- Wide full-width container for additional content -->
-        </div>
-        <div class="w-full">
-            <!-- Wide full-width container for additional content -->
-        </div>
-        <div class="w-full bg-green-500">
-            <!-- Full-width footer container with green background -->
-        </div>
-        <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/plugins/countup.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/countto.js"></script>
-        <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/plugins/leaflet.js"></script>
-        <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/maps.js"></script>
-        <script src="./assets/js/loopple/loopple.js"></script>
-    </body>
-</html>
+
+    <!-- COMPONENT 1 -->
+
+    <!-- Header and Nav Bar -->
+    <body class="bg-gray-100">
+        <body class="bg-gray-100">
+            <div class="mx-auto bg-white">
+              <div class="relative flex flex-wrap items-center justify-between w-full bg-white py-7 shrink-0">
+                <div class="px-4">
+                  <img class="h-8" src="assets\component-1\navigation\cache-bank-logo.png"/>
+                </div>
+                <div class="hidden md:flex items-center justify-between gap-12 text-black">
+                  <a href="javascript:void(0)" class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900">
+                    Product
+                  </a>
+                  <a href="javascript:void(0)" class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900">
+                    Features
+                  </a>
+                  <a href="javascript:void(0)" class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900">
+                    Get Started
+                  </a>
+                  <a href="javascript:void(0)" class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900">
+                    Contact
+                  </a>
+                </div>
