--- a/index.html
+++ b/index.html
@@ -38,3 +38,13 @@
                     Contact
                   </a>
                 </div>
+
+                <!-- Buttons -->
+        <div class="hidden md:flex items-center gap-8 p-4">
+            <button class="text-sm font-normal text-dark-grey-800 hover:text-dark-grey-900">
+              Log In
+            </button>
+            <button class="px-4 py-2 text-sm font-bold text-blue bg-green-500 rounded-xl hover:bg-pink-500">
+              Sign Up
+            </button>
+          </div>
