--- a/index.html
+++ b/index.html
@@ -48,3 +48,41 @@
               Sign Up
             </button>
           </div>
+          
+          <!-- SVG for mobile menu icon -->
+        <button class="md:hidden p-4" id="mobile-menu-toggle">
+            <svg fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6" fill="none" xmlns="https://www.w3.org/2000/svg">
+              <g clip-path="url(#clip0_429_11066)">
+                <path d="M3 6.00092H21M3 12.0009H21M3 18.0009H21" stroke="#292929" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+              </g>
+              <defs>
+                <clipPath id="clip0_429_11066">
+                  <rect width="24" height="24" fill="white" transform="translate(0 0.000915527)"/>
+                </clipPath>
+              </defs>
+            </svg>
+          </button>
+          <div class="absolute flex md:hidden flex-col items-start shadow-main justify-center w-full gap-3 overflow-hidden bg-white max-h-screen top-full" id="mobile-menu">
+            <a href="javascript:void(0)" class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900">
+              Product
+            </a>
+            <a href="javascript:void(0)" class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900">
+              Features
+            </a>
+            <a href="javascript:void(0)" class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900">
+              Get Started
+            </a>
+            <a  
+              href="javascript:void(0)" class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900">
+              Contact
+            </a>
+  
+            <button class="flex items-center text-sm font-normal text-black">
+              Log In
+            </button>
+            <button class="flex items-center px-4 py-2 text-sm font-bold rounded-xl bg-purple-blue-100 text-purple-600 hover:bg-purple-blue-600 hover:text-white transition duration-300">
+              Sign Up
+            </button>
+          </div>
+        </div>
+  
