added the scripts links

--- a/index.html
+++ b/index.html
@@ -486,4 +486,28 @@
                                 </svg>
                             </a>
                         </div>
+
+                       <!-- Copyright -->
+                        <div class="flex items-center">
+                            <p class="text-base font-normal leading-7 text-center">2024 Cache Bank. All rights reserved.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <script>
+          document.getElementById("mobile-menu-toggle").addEventListener("click", function () {document.getElementById("mobile-menu").classList.toggle("hidden");
+
+          });
+        </script>
+        
+        <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/plugins/countup.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/countto.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/plugins/leaflet.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/maps.js"></script>
+        <script src="./assets/js/loopple/loopple.js"></script>
+    </body>
+</html>
+   
   
